--- a/src/components/IntroContent.css
+++ b/src/components/IntroContent.css
@@ -1,10 +1,11 @@
 .me{
+  max-width: 50vw;
     border-radius: 25%;
   }
 
   .intro-text{
     color: white;
-    max-width: 30vw;
+    width: 30vw;
     text-align: left;
   }
 
@@ -38,4 +39,25 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
+  }
+
+  @media (max-width: 768px) { 
+    .content {
+      flex-direction: column; 
+      flex-grow: 0;
+    }
+    .me, .UM {
+      width: 300px;
+      position: relative;
+      top: 100px;
+      margin:10px;
+    }
+    .gradient-container, .speel{
+      position: relative;
+      top: 100px;
+    }
+    .intro-text{
+      width: auto;
+      padding: 25px;
+    }
   }
