--- a/src/components/Sidenav/Sidenav.css
+++ b/src/components/Sidenav/Sidenav.css
@@ -1,5 +1,5 @@
 .big {
-  height: 100%;
+  height: 100vh;
 }
 
 .side-container {
@@ -9,10 +9,12 @@
   transition: width 0.5s;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .side-container.expanded {
   width: 100%;
+  align-items: center;
 }
 
 .burger-button {
@@ -24,10 +26,7 @@
   justify-content: center;
   border-style: none;
   border-radius: 50%;
-  padding-top: 1px;
-  padding-left: 10px;
-  margin-top: 15px;
-  margin-left: 15px;
+  align-items: center;
 }
 
 .hamburger-line {
