Fixed resizing on CharacterScreen

--- a/src/components/CharacterScreen/CharacterScreen.css
+++ b/src/components/CharacterScreen/CharacterScreen.css
@@ -1,6 +1,9 @@
 /* CharacterScreen.css */
 .main-gallery {
   padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-container {
