--- a/src/components/Streamlit/Streamlit.css
+++ b/src/components/Streamlit/Streamlit.css
@@ -46,7 +46,7 @@
     justify-content: center;
     height: 100%;
     align-items: center;
-    background-color: #131314;
+    background-color: #3c4043;
     padding-top: 5vh;
     padding-bottom: 5vh;
   }
