--- a/src/components/CharacterScreen/CharacterScreen.css
+++ b/src/components/CharacterScreen/CharacterScreen.css
@@ -99,7 +99,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #3c4043;
+  background-color: #131314;
   color: white;
   border: none;
 }
@@ -109,7 +109,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #3c4043;
+  background-color: #131314;
   color: white;
   border: none;
 }
@@ -120,7 +120,6 @@
 
 @media (max-width: 768px) {
   .character-boss {
-    background-color: #3c4043;
     padding-top: 5vh;
     padding-bottom: 5vh;
   }
